--- a/apps/chatapp/project.json
+++ b/apps/chatapp/project.json
@@ -49,7 +49,8 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "chatapp:build",
-        "hmr": true
+        "hmr": true,
+        "proxyConfig": "apps/chatapp/proxy.conf.json"
       },
       "configurations": {
         "development": {
