--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/websockets": "^9.2.1",
     "core-js": "^3.6.5",
     "framer-motion": "^8.0.2",
     "react": "18.2.0",
